--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = '0.1.0'
 edition = '2024'
 
 [dependencies]
+windows = { version = "0.61.1", features = [
+    'Win32_System_LibraryLoader',
+    'Win32_UI_Accessibility',
+] }
 tokio = { version = '1.45.1', features = [
     'rt-multi-thread',
     'macros',
@@ -16,7 +20,7 @@ reqwest = { version = '0.12.19', features = ['json'] }
 serde = { version = '1.0.219', features = ['derive'] }
 serde_json = '1.0.140'
 tempfile = '3.20.0'
-toml = '0.8.22'
+toml = '0.8.23'
 wasapi = '0.18.0'
 ravif = '0.11.12'
 opus = '0.3.0'
