--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ wasapi = '0.19.0'
 dirs = "6.0.0"
 winit = "0.30.11"
 softbuffer = "0.4.6"
+ffmpeg-sys-next = "7.1.3"
+ez-ffmpeg = "0.5.2"
 
 [profile.release]
 lto = "fat"
