--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ dirs = "6.0.0"
 winit = "0.30.11"
 softbuffer = "0.4.6"
 ffmpeg-sys-next = "7.1.3"
-ez-ffmpeg = "0.5.3"
+ez-ffmpeg = { path = "../ez-ffmpeg" }
 
 [profile.release]
 lto = "fat"
