--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,8 @@ serde = { version = '1.0.219', features = ['derive'] }
 serde_json = '1.0.141'
 toml = '0.9.2'
 
-ravif = '0.12.0'
-opus = '0.3.0'
 rdev = { version = '0.5.3', features = ['serialize'] }
 rgb = '0.8.52'
-
-ogg = "0.9.2"
-mp3lame-encoder = "0.2.1"
-webp = "0.3.0"
 
 once_cell = "1.21.3"
 windows-capture = "1.5.0"
@@ -36,6 +30,7 @@ wasapi = '0.19.0'
 dirs = "6.0.0"
 winit = "0.30.11"
 softbuffer = "0.4.6"
+ffmpeg-sidecar = "2.0.6"
 
 [profile.release]
 lto = "fat"
